@@ -127,11 +127,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-  *) core, rewrite: Set PCRE_DOTALL by default
-     trunk: http://svn.apache.org/1864192
-     2.4.x: svn merge  -c 1864192 ^/httpd/httpd/trunk .
-     +1: covener, rpluem, icing
-
 
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
